# hubspot-mcp

./: .env.example  README.md  pyproject.toml  requirements.txt  run_server.py  test_setup.py
src/hubspot/: __init__.py  connection.py  server.py
src/hubspot/tools/: __init__.py  company.py  contact.py  deal.py  engagement.py  list.py  ticket.py
